--- a/app.kv
+++ b/app.kv
@@ -266,15 +266,29 @@ ScreenManager:
                 MDBoxLayout:
                         size_hint: 0.9, 1
                         orientation: 'vertical'
-                        md_bg_color: 'white'
-                        padding: 50
 
                         MDLabel:
-                                text: "This is Inventory"
+                                text: "This is Orders"
                                 halign: "center"
                                 font_style: "H3"
-                                pos_hint: {"center_x": .5, "center_y": .5}
-                                size_hint: 1, 0.3
+                                size_hint: 1, 0.1
+
+                        MDBoxLayout:
+                                size_hint: 0.9, 1
+                                orientation: 'horizontal'
+                                padding: 50
+
+                                MDBoxLayout:
+                                        size_hint: 0.5, 1
+                                        orientation: 'vertical'
+                                        MDCard:
+                                                md_bg_color: 'blue'
+                                MDBoxLayout:
+                                        size_hint: 0.5, 1
+                                        orientation: 'vertical'
+
+                                        MDCard:
+                                                md_bg_color: 'blue'
 
 <OrderManager>:
         BoxLayout:
